tests/coverage/misc/fail/negative/truncation/001_array_eof.js
// Expected error: unterminated array literal.
const value = [1, 2, 3;
